--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
+choreographer==1.0.9
 click==8.2.1
 cohere==5.15.0
 contourpy==1.3.2
@@ -26,7 +27,9 @@ huggingface-hub==0.33.0
 idna==3.10
 Jinja2==3.1.6
 jiter==0.10.0
+kaleido==1.0.0
 kiwisolver==1.4.8
+logistro==1.1.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
@@ -56,6 +59,7 @@ safehttpx==0.1.6
 seaborn==0.13.2
 semantic-version==2.10.0
 shellingham==1.5.4
+simplejson==3.20.1
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
